# compact-serialize

./: Test.hs  compact-serialize.cabal
src/Data/Compact/: Serialize.hs
